--- a/animeblog.html
+++ b/animeblog.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Ethan's Anime Blog</title>
+    <title>Anime Blog</title>
 
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
